@@ -252,8 +252,8 @@ public class RecipeServiceSub {
                         recipeExtend.setCardNo(revisitExDTO.getCardId());
                         recipeExtend.setCardType(revisitExDTO.getCardType());
                         recipeExtend.setRegisterID(revisitExDTO.getRegisterNo());
-                        if(new Double(0.0).equals(revisitExDTO.getWeight())){
-                            recipeExtend.setWeight(Double.valueOf(" "));
+                        if(new Double(0).equals(revisitExDTO.getWeight())){
+                            recipeExtend.setWeight(null);
                         }
                         recipeExtend.setWeight(revisitExDTO.getWeight());
                     }
@@ -264,8 +264,8 @@ public class RecipeServiceSub {
                         recipeExtend.setCardNo(consultExDTO.getCardId());
                         recipeExtend.setCardType(consultExDTO.getCardType());
                         recipeExtend.setRegisterID(consultExDTO.getRegisterNo());
-                        if(new Double(0.0).equals(consultExDTO.getWeight())){
-                            recipeExtend.setWeight(Double.valueOf(" "));
+                        if(new Double(0).equals(consultExDTO.getWeight())){
+                            recipeExtend.setWeight(null);
                         }
                         recipeExtend.setWeight(consultExDTO.getWeight());
                     }
